--- a/Memoria/agradecimientos.tex
+++ b/Memoria/agradecimientos.tex
@@ -1,4 +1,8 @@
 \chapter{Agradecimientos}
 %\thispagestyle {empty}
 
-Agradezco toda la ayuda prestada por \dots %\dots pone los puntos suspensivos: "..."
+Mis más sinceros agradecimientos a todos los que han hecho posible la realización de este proyecto, tanto profesores como compañeros. En especial a mi tutor Eduardo García Pardo y a mi pareja Claudia Lertora.
+
+Este ha sido un gran año, espero que sigamos en contacto.
+
+¡Gracias!
